--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,8 +5,8 @@ spring.datasource.url: jdbc:mysql://localhost:3306/search_engine?useSSL=false&re
 spring.datasource.username: root
 spring.datasource.password: 3507988Asd
 spring.jpa.generate-ddl: false
-#spring.jpa.hibernate.ddl-auto: update
-spring.jpa.hibernate.ddl-auto: create
+spring.jpa.hibernate.ddl-auto: update
+#spring.jpa.hibernate.ddl-auto: create
 
 # показывает запросы к БД
 spring.jpa.show-sql: false
@@ -21,6 +21,7 @@ indexing-settings:
 
     - url: https://fidgroup.by
       name: FidGroup
+
     - url: https://skillbox.ru
       name: Skillbox
 
