--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
         <!--зависимости библиотек лемматизаторов-->
         <dependency>
             <groupId>org.apache.lucene.morphology</groupId>
