--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,10 +3,9 @@ server.port: 8080
 
 spring.datasource.url: jdbc:mysql://localhost:3306/search_engine?useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&character_set_server=utf8mb4
 spring.datasource.username: root
-spring.datasource.password: 3507988Asd
+spring.datasource.password: root
 spring.jpa.generate-ddl: false
-spring.jpa.hibernate.ddl-auto: update
-#spring.jpa.hibernate.ddl-auto: create
+spring.jpa.hibernate.ddl-auto: create
 
 # показывает запросы к БД
 spring.jpa.show-sql: false
@@ -22,8 +21,8 @@ indexing-settings:
     - url: https://fidgroup.by
       name: Группа ФИД - FidGroup
 
-    - url: https://www.fidmash.ru
-      name: ФИДМАШ - FidMash
+#    - url: https://www.fidmash.ru
+#      name: ФИДМАШ - FidMash
 
 #    - url: https://skillbox.ru
 #      name: Skillbox
