--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,9 +3,9 @@ server.port: 8080
 
 spring.datasource.url: jdbc:mysql://localhost:3306/search_engine?useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&character_set_server=utf8mb4
 spring.datasource.username: root
-spring.datasource.password: root
+spring.datasource.password: 3507988Asd
 spring.jpa.generate-ddl: false
-spring.jpa.hibernate.ddl-auto: create
+spring.jpa.hibernate.ddl-auto: update
 
 # показывает запросы к БД
 spring.jpa.show-sql: false
@@ -13,19 +13,12 @@ spring.jpa.show-sql: false
 # example values
 indexing-settings:
   sites:
-    #    - url: https://lenta.ru
-    #      name: Лента.ру
-    #    - url: https://skillbox.ru
-    #      name: Skillbox
 
     - url: https://fidgroup.by
       name: Группа ФИД - FidGroup
 
-#    - url: https://www.fidmash.ru
-#      name: ФИДМАШ - FidMash
+    - url: https://www.fidmash.ru
+      name: ФИДМАШ - FidMash
 
-#    - url: https://skillbox.ru
-#      name: Skillbox
-
-
-
+    - url: https://dombulgakova.ru/
+      name: Dombulgakova
