--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,17 +13,11 @@ spring.jpa.show-sql: false
 indexing-settings:
   sites:
 
-#    - url: https://fidgroup.by
-#      name: Группа ФИД - FidGroup
-#
-#    - url: https://www.fidmash.ru
-#      name: ФИДМАШ - FidMash
-#
-#    - url: https://dombulgakova.ru/
-#      name: Dombulgakova
-
-    - url: https://tortishnaya.ru
-      name: Тортишная - кондитерская
-
     - url: https://crazypanda.ru
-      name: Крэйзи Панда Рус
+      name: Крэйзи Панда
+
+    - url: https://art-kvartal.art
+      name: Арт Квартал
+
+#    - url: https://www.svetlovka.ru
+#      name: Светловка
